# codigest

./: .gitignore  GEMINI.md  README.md  code_tree.py  codigest_context.txt  main.py  project_context.txt  pyproject.toml  read_all.py  requirements.txt  setup.cfg  text.txt
.github/workflows/: main.yml  publish.yml
codeinspector/: analyzer.py  cli.py  file_utils.py  gather.py  profile.py  report.py
inspection/: __main__.py  file_structure.py  list_codes.py  load_dir_files.py  profiler.py  project_overview.py
src/codigest/: actions.py  cli.py  commands.py  config.py  config_manager.py  core.py  git_ops.py  handlers.py  interactive.py  main.py  output_handler.py  prompts.py  tags.py
src/codigest/commands/: diff.py  digest.py  init.py  scan.py  semdiff.py  tree.py
src/codigest/core/: common.py  processor.py  prompts.py  resolver.py  scanner.py  semdiff.py  shadow.py  structure.py  tags.py
