[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codigest"
version = "0.1.5"
description = "Digest your codebase for LLM context with Vibe Coding flow."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pathspec",
    "platformdirs",
    "prompt-toolkit",
    "pyperclip",
]

[project.scripts]
codigest = "codigest.cli:main"

[dependency-groups]
dev = [
    "ruff",
]
