[project]
name = "codigest"
version = "0.2.0"
description = "Semantic Context Manager for LLMs"
authors = [{name = "Codigest Team"}]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer",
    "rich",
    "loguru",
    "pathspec",
    "pyperclip",
    "tomli-w",
]

[project.scripts]
codigest = "codigest.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff",
]
