[project]
name = "codigest"
version = "0.3.0"
description = "Human-Centered Codebase Context Manager for LLMs"
authors = [{name = "Codigest Team"}]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer",
    "rich",
    "loguru",
    "pathspec",
    "pyperclip",
    "tomli-w",
]

[project.scripts]
codigest = "codigest.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff",
]